<?xml version="1.0"?>
<package>
  <name>segment_lane_lines</name>
  <version>0.0.0</version>
  <description>ROS package for semantic segmentation of lane lines, and homographic transformation of the segmented image for rebroadcasting as a point cloud.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="contact@chicagoedt.org">Chicago EDT</maintainer>
  <maintainer email="JeffKo427@gmail.com">Jeff Alan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/lane_finding</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="contact@chicagoedt.org">Chicago EDT</maintainer>
  <author email="JeffKo427@gmail.com">Jeff Alan</maintainer>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
